implement #984 - "replicainfo" configuration directive - default: enable - When "replicainfo disable" is specified, automatic file replication   and replica_check in gfmd do not use the number of replicas per   hostgroup in gfarm.replicainfo (REPATTER), but use the total number   of replicas in gfarm.replicainfo. (, or use gfarm.ncopy if   gfarm.ncopy is larger than the total number of gfarm.replicainfo.) - gfstatus -Mm 'replicainfo disable' can disable this temporarily.

--- a/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -5,7 +5,7 @@
 
 <refentry id="gfarm2.conf.5">
 
-<refentryinfo><date>28 September 2016</date></refentryinfo>
+<refentryinfo><date>25 Jan 2017</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm2.conf</refentrytitle>
@@ -2260,6 +2260,32 @@ This parameter is only available in gfmd.conf.
 </varlistentry>
 
 <varlistentry>
+<term><token>replicainfo</token> <parameter moreinfo="none">validity</parameter></term>
+<listitem>
+<para>
+When "enable" is specified, the extended attribute of
+gfarm.replicainfo is used in automatic file replication.
+When "disable" is specified, the hostgroups in gfarm.replicainfo is
+not used, but the total number of replicas in gfarm.replicainfo is
+used, if the total number is larger than gfarm.ncopy.
+For detail about the extended attribute of gfarm.replicainfo, refer to
+the manual page of <command moreinfo="none">gfncopy</command>.
+The default is <token>enable</token>.
+</para>
+<para>
+gfstatus -Mm 'replicainfo disable' can disable this temporarily.
+</para>
+<para>
+This parameter is only available in gfmd.conf.
+</para>
+<para>Example:</para>
+<literallayout format="linespecific" class="normal">
+	replicainfo disable
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><token>write_verify</token> <parameter moreinfo="none">validity</parameter></term>
 <listitem>
 <para>
@@ -2463,6 +2489,7 @@ gfsd uses this setting at its startup by asking gfmd.
 	&lt;replica_check_host_down_thresh_statement&gt; |
 	&lt;replica_check_sleep_time_statement&gt; |
 	&lt;replica_check_minimum_interval_statement&gt; |
+	&lt;replicainfo_statement&gt; |
 	&lt;write_verify_statement&gt; |
 	&lt;write_verify_interval_statement&gt; |
 	&lt;write_verify_retry_interval_statement&gt; |
@@ -3181,6 +3208,11 @@ gfsd uses this setting at its startup by asking gfmd.
 <term>&lt;fatal_action_name&gt; ::=</term>
 <listitem><literallayout format="linespecific" class="normal">"backtrace_and_abort" | "backtrace_and_exit" |
 	"abort" | "exit"</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;replicainfo_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"replicainfo" &lt;validity&gt;</literallayout></listitem>
 </varlistentry>
 
 <varlistentry>
