--- a/gfarm_v2/branches/2.7/INSTALL.ja
+++ b/gfarm_v2/branches/2.7/INSTALL.ja
@@ -127,9 +127,10 @@ postgresql, postgresql-server		(config-gfarm の実行に必要)
 fuse-devel				(gfarm2fs の構築に必要)
 ganglia-gmond-python			(config-gf[ms]d-iostat の実行に必要)
 
-(*) http://toolkit.globus.org/toolkit/downloads/latest-stable/
-    を参考に Globus configuration ファイルを導入する必要があります．
-    例えば，CentOS 6，Globus 6.0の場合，以下の様になります．
+(*) EPEL あるいは Globus Repository に含まれます．Globus Repository を用
+    いる場合は，http://toolkit.globus.org/toolkit/downloads/latest-stable/
+    を参考に Globus configuration ファイルを導入します．
+    例えば，CentOS 6，Globus 6.0 の場合，以下の様になります．
     # rpm -Uvh http://toolkit.globus.org/ftppub/gt6/installers/repo/globus-toolkit-repo-latest.noarch.rpm
 
 * Debian パッケージ
