sequel to r10441 - missing tag

--- a/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
+++ b/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
@@ -1227,6 +1227,7 @@ CPU負荷が高いとみなされるCPU負荷を指定します。
 </para>
 <para>
 この文はクライアントおよびgfmdで有効です。
+</para>
 <para>例:</para>
 <literallayout format="linespecific" class="normal">
 	schedule_busy_load_thresh 0.5
