--- a/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
@@ -2,12 +2,12 @@
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 24 Feb 2017
+.\"      Date: 9 Jun 2017
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFARM2\&.CONF" "5" "24 Feb 2017" "Gfarm" "Gfarm"
+.TH "GFARM2\&.CONF" "5" "9 Jun 2017" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -950,6 +950,29 @@ For example,
 .\}
 .nf
 	directory_quota_count_per_user_limit 1000
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+directory_quota_check_start_interval \fIseconds\fR
+.RS 4
+The
+directory_quota_check_start_interval
+statement specifies interval to start re\-calculation of directory quota, when such re\-calculation becomes necessary\&. This parameter is to reduce number of multiple re\-calculation to once during the interval\&.
+.sp
+The default value is 60 seconds\&.
+.sp
+This directive is only available in gfmd\&.conf, and ignored in gfarm2\&.conf\&.
+.sp
+For example,
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	directory_quota_check_start_interval 120
 .fi
 .if n \{\
 .RE
@@ -2516,6 +2539,7 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 	<shared_key_file_statement> |
 	<digest_statement> |
 	<directory_quota_count_per_user_limit_statement> |
+	<directory_quota_check_start_interval_statement> |
 
 	<sockopt_statement> |
 
@@ -3183,6 +3207,20 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 .\}
 .nf
 "directory_quota_count_per_user_limit" <number>
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+<directory_quota_check_start_interval_statement> ::=
+.RS 4
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+"directory_quota_check_start_interval" <number>
 .fi
 .if n \{\
 .RE
