--- a/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
@@ -2,12 +2,12 @@
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 9 Jun 2017
+.\"      Date: 15 Jun 2017
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFARM2\&.CONF" "5" "9 Jun 2017" "Gfarm" "Gfarm"
+.TH "GFARM2\&.CONF" "5" "15 Jun 2017" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -956,11 +956,11 @@ For example,
 .\}
 .RE
 .PP
-directory_quota_check_start_interval \fIseconds\fR
+directory_quota_check_start_delay \fIseconds\fR
 .RS 4
 The
-directory_quota_check_start_interval
-statement specifies interval to start re\-calculation of directory quota, when such re\-calculation becomes necessary\&. This parameter is to reduce number of multiple re\-calculation to once during the interval\&.
+directory_quota_check_start_delay
+statement specifies the delay until starting re\-calculation of directory quota, when such re\-calculation becomes necessary\&. This parameter is to reduce number of multiple re\-calculation to once during the delay period\&.
 .sp
 The default value is 60 seconds\&.
 .sp
@@ -972,7 +972,7 @@ For example,
 .RS 4
 .\}
 .nf
-	directory_quota_check_start_interval 120
+	directory_quota_check_start_delay 120
 .fi
 .if n \{\
 .RE
@@ -2539,7 +2539,7 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 	<shared_key_file_statement> |
 	<digest_statement> |
 	<directory_quota_count_per_user_limit_statement> |
-	<directory_quota_check_start_interval_statement> |
+	<directory_quota_check_start_delay_statement> |
 
 	<sockopt_statement> |
 
@@ -3213,14 +3213,14 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 .\}
 .RE
 .PP
-<directory_quota_check_start_interval_statement> ::=
+<directory_quota_check_start_delay_statement> ::=
 .RS 4
 .sp
 .if n \{\
 .RS 4
 .\}
 .nf
-"directory_quota_check_start_interval" <number>
+"directory_quota_check_start_delay" <number>
 .fi
 .if n \{\
 .RE
