--- a/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
@@ -1,7 +1,7 @@
 '\" t
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
+.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
 .\"      Date: 31 Aug 2017
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
@@ -1557,6 +1557,23 @@ For example,
 .\}
 .RE
 .PP
+replication_busy_host \fIvalidity\fR
+.RS 4
+This directive specifies whether destination of gfmd\-initiated replication includes busy hosts or not\&. When it is disabled, a file replica is not created to busy hosts\&. The default is enabled\&.
+.sp
+For example,
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	replication_busy_host disable
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
 gfsd_connection_cache \fInumber\fR
 .RS 4
 This directive specifies maximum number of cached gfsd connections\&. The default is 16\&.
@@ -2727,6 +2744,7 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 	<minimum_free_disk_space_statement> |
 	<direct_local_access_statement> |
 	<simultaneous_replication_receivers_statement> |
+	<replication_busy_host_statement> |
 	<gfsd_connection_cache_statement> |
 	<xmlattr_size_limit_statement> |
 	<xattr_size_limit_statement> |
@@ -3791,6 +3809,20 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 .\}
 .nf
 "simultaneous_replication_receivers" <number>
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+<replication_busy_host_statement> ::=
+.RS 4
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+"replication_busy_host" <validity>
 .fi
 .if n \{\
 .RE
