--- a/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
@@ -2252,9 +2252,9 @@ Example:
 .PP
 replica_check \fIvalidity\fR
 .RS 4
-When "enable" is specified, the replica_check system in gfmd can check and fix the number and placement of file replicas automatically\&. The replica_check works only when necessary\&. The default value is "enable"\&. This behavior can be chagned by the
+A replica check patrols the file system when it is necessary, and creates missing file replicas\&. The default is enable\&. This feature can be dynamically enabled or disabled by the
 \fBgfrepcheck\fR
-command in online\&.
+command\&.
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2273,9 +2273,9 @@ Example:
 .PP
 replica_check_remove \fIvalidity\fR
 .RS 4
-When "enable" is specified, the replica_check system in gfmd can remove excessive file rpelicas automatically\&. As an exception, when a file has hard\-links (nlink >= 2) and replication attributes (gfarm\&.ncopy or gfarm\&.replicainfo) in the file itself is not set, the excessive file replicas does not remove automatically\&. The default value is "enable"\&. This behavior can be chagned by the
+This directive is effective when replica_check is enabled\&. When replica_check_remove is enabled, the replica check removes unnecessary file replicas unless it has two or more link counts\&. It leaves file replicas for files without replica information such as gfarm\&.ncopy and gfarm\&.replicainfo\&. The default is enable\&. This feature can be dynamically enabled or disabled by the
 \fBgfrepcheck remove\fR
-command in online\&.
+command\&.
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2292,11 +2292,21 @@ Example:
 .\}
 .RE
 .PP
-replica_check_remove_grace_used_space_ratio \fIpercent\fR
+replica_check_remove_grace_used_space_ratio \fIpercentage\fR
 .RS 4
-This behavior can be chagned by the
-\fBgfstatus \-Mm "replica_check_remove_grace_used_space_ratio {value}"\fR
-command in online\&.
+This directive is effective when replica_check_remove is enabled\&. Unnecessary file replicas are removed only when a percentage of the used capacity is more than the specified percent value\&. The percentage can be specified by an integer value between 0 and 100\&. When 100 is specified, unnecessary file replicas are not removed\&. The default is 0\&.
+.sp
+The percentage can be dynamically changed by the gfstatus command\&. The following example changes to 50%\&.
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	% gfstatus \-Mm "replica_check_remove_grace_used_space_ratio 50"
+.fi
+.if n \{\
+.RE
+.\}
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2315,9 +2325,19 @@ Example:
 .PP
 replica_check_remove_grace_time \fIseconds\fR
 .RS 4
-This behavior can be chagned by the
-\fBgfstatus \-Mm "replica_check_remove_grace_time {value}"\fR
-command in online\&.
+This directive is effective when replica_check_remove is enabled\&. Unnecessary file replicas are removed only when it is not accessed for more than the specified seconds\&. The default is 0\&.
+.sp
+The grace time can be dynamically changed by the gfstatus command\&. The following example changes to 1 week (= 604800 seconds)\&.
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	% gfstatus \-Mm "replica_check_remove_grace_time 604800"
+.fi
+.if n \{\
+.RE
+.\}
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
